# classcii

./: .gitignore  ASCIIFORGE_SPEC.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  clippy_out.txt
.github/workflows/: ci.yml  release.yml
config/: default.toml
config/presets/: 01_cyber_braille.toml  01_pure_photo.toml  02_film_grain.toml  02_matrix.toml  03_ghost_edge.toml  03_soft_focus.toml  04_noir.toml  04_pure_ascii.toml  05_breath.toml  05_classic_gradient.toml  06_clean_gradient.toml  06_vector_edges.toml  07_braille_cinema.toml  07_neon_abyss.toml  07_sextant_cinema.toml  08_braille_hd.toml  08_cyber_noise.toml  09_brutalism_mono.toml  09_spectral_bands.toml  10_ethereal_shape.toml  10_vector_wire.toml  11_deep_zoom.toml  12_aurora.toml  12_deep_zoom.toml  13_breath.toml  13_reactive_showcase.toml  14_brutalism.toml  14_interference.toml  15_neon_edge.toml  15_noir.toml  16_aurora.toml  16_cyber_braille.toml  17_matrix_rain.toml  17_static.toml  18_interference.toml  19_ghost_trail.toml  20_sextant_film.toml  20_tv_static.toml  21_glitch_storm.toml  21_octant_dense.toml  (+4 more)
crates/af-app/: Cargo.toml
crates/af-app/src/: app.rs  batch.rs  cli.rs  creation.rs  generative.rs  hotreload.rs  lib.rs  main.rs  pipeline.rs
crates/af-app/tests/: mapping_pipeline.rs
crates/af-ascii/: Cargo.toml
crates/af-ascii/benches/: compositor.rs
crates/af-ascii/src/: braille.rs  color_map.rs  compositor.rs  dither.rs  edge.rs  halfblock.rs  lib.rs  luminance.rs  quadrant.rs  shape_match.rs
crates/af-ascii/src/geometry/: mod.rs  petscii.rs
crates/af-ascii/src/masks/: braille.rs  mod.rs  octants.rs  sextants.rs
crates/af-ascii/tests/: compositor_integration.rs
crates/af-audio/: Cargo.toml
crates/af-audio/benches/: audio.rs
crates/af-audio/src/: batch_analyzer.rs  beat.rs  capture.rs  decode.rs  error.rs  features.rs  fft.rs  lib.rs  smoothing.rs  state.rs
crates/af-audio/tests/: audio_pipeline.rs
crates/af-core/: Cargo.toml  build.rs
crates/af-core/src/: charset.rs  clock.rs  color.rs  config.rs  embedded.rs  error.rs  feature_timeline.rs  frame.rs  lib.rs  paths.rs  traits.rs  workflow.rs  workflow_io.rs
crates/af-core/tests/: preset_loading.rs
crates/af-export/: Cargo.toml
crates/af-export/src/: lib.rs  muxer.rs  rasterizer.rs
crates/af-render/: Cargo.toml
crates/af-render/benches/: effects.rs
crates/af-render/src/: camera.rs  canvas.rs  effects.rs  fps.rs  lib.rs  ui.rs  widgets.rs
crates/af-source/: Cargo.toml
crates/af-source/src/: folder_batch.rs  image.rs  lib.rs  procedural.rs  resize.rs  video.rs  webcam.rs
crates/af-source/src/procedural/: mandelbrot.rs
crates/af-stems/: Cargo.toml
crates/af-stems/src/: analysis.rs  lib.rs  playback.rs  separator.rs  stem.rs
docs/: AUDIO_GUIDE.md  CHARSET_REFERENCE.md  EFFECTS_REFERENCE.md  PRESET_GUIDE.md  REFERENCE.md  TIPS_AND_TRICKS.md  TOML_SCHEMA.md  USAGE.md
memory/: MEMORY.md
scripts/: gen_octant_lut.py  octant_lut_generated.rs  setup_stems.bat  setup_stems.sh
