[package]
name = "af-app"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true

[[bin]]
name = "classcii"
path = "src/main.rs"

[dependencies]
af-core = { path = "../af-core" }
af-audio = { path = "../af-audio" }
af-source = { path = "../af-source" }
af-ascii = { path = "../af-ascii" }
af-render = { path = "../af-render" }
af-export = { path = "../af-export" }
af-stems = { path = "../af-stems" }
clap = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
arc-swap = { workspace = true }
triple_buffer = { workspace = true }
flume = { workspace = true }
crossterm = { workspace = true }
ratatui = { workspace = true }
notify = { workspace = true }
rfd = { workspace = true }
cpal = { workspace = true }
fastrand = "2"

[features]
default = ["image-source"]
image-source = ["af-source/image-source"]
full = ["video"]
video = ["af-source/video"]

[build-dependencies]
winresource = "0.1"

[lints]
workspace = true
