[package]
name = "af-audio"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true

[dependencies]
af-core = { path = "../af-core" }
cpal = { workspace = true }
realfft = { workspace = true }
symphonia = { workspace = true }
rtrb = { workspace = true }
triple_buffer = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
flume = { workspace = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "audio"
harness = false

[lints]
workspace = true
