[package]
name = "af-render"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
af-core = { path = "../af-core" }
ratatui = { workspace = true }
crossterm = { workspace = true }
log = { workspace = true }

[lints]
workspace = true
