[package]
name = "af-render"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true

[dependencies]
af-core = { path = "../af-core" }
ratatui = { workspace = true }
crossterm = { workspace = true }
log = { workspace = true }
rayon.workspace = true

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "effects"
harness = false

[lints]
workspace = true
