[package]
name = "af-source"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true

[dependencies]
af-core = { path = "../af-core" }
image = { workspace = true }
fast_image_resize = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
# DEVIATION: R9 — flume requis par video.rs (channels frame/commande)
flume = { workspace = true }

# DEVIATION: R9 — ffmpeg-the-third retiré car vcpkg/pkg-config absents sur Windows MSVC.
# Remplacé par approche subprocess (ffmpeg.exe en PATH via WinGet v8.0.1).
# ffmpeg-the-third = { version = "2", optional = true }
noise = { version = "0.9", optional = true }
glam = { workspace = true, optional = true }
rayon.workspace = true
arc-swap.workspace = true

[features]
default = ["image-source"]
image-source = []
# DEVIATION: R9 — video ne dépend plus de ffmpeg-the-third, utilise subprocess std::process
video = []
procedural = ["dep:noise", "dep:glam"]

[lints]
workspace = true
